Modified footer in views/footer.ejs

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,7 @@
 </body>
 
 <footer>
-  Copyright 2018 The App Brewery
+  Produced (with some effort and considerable patience!) by Ryan Hadley
 </footer>
 
 </html>
